--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@visx/drag": "^3.0.1",
+    "@visx/responsive": "^3.0.0",
+    "@visx/scale": "^3.0.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "glob": "^7.1.6",
