--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "build": "rimraf ./build && tsc"
     },
     "dependencies": {
+        "@apollo/server": "^4.5.0",
         "compression": "^1.7.4",
         "config": "^3.3.9",
         "cors": "^2.8.5",
