--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
         "watch": [
             "src"
         ],
-        "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/app.ts",
+        "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/graphqlApp.ts",
         "ext": "ts, js"
     },
     "scripts": {
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@apollo/server": "^4.5.0",
+        "@types/lodash": "^4.14.192",
         "compression": "^1.7.4",
         "config": "^3.3.9",
         "cors": "^2.8.5",
@@ -36,7 +37,6 @@
         "graphql": "^16.6.0",
         "helmet": "^6.0.1",
         "joi": "^17.8.4",
-        "lodash": "^4.17.21",
         "mongodb": "^4.14.0",
         "mongoose": "^7.0.2",
         "morgan": "^1.10.0",
