More cleanup and updated README

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
         "watch": [
             "src"
         ],
-        "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/graphqlApp.ts",
+        "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/app.ts",
         "ext": "ts, js"
     },
     "scripts": {
