--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,26 +13,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@visx/curve": "^3.0.0",
     "@visx/drag": "^3.0.1",
     "@visx/responsive": "^3.0.0",
     "@visx/scale": "^3.0.0",
+    "@visx/shape": "^3.0.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "glob": "^7.1.6",
     "mkdirp": "^2.1.4",
-    "mongodb": "^4.14.0",
     "next": "13.2.3",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slider": "^2.0.4",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "svg-sprite": "^1.5.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
