updated gitignore and also removed the framesChunkSize from graphql query results

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -36,3 +36,7 @@ yarn-error.log*
 # game data files
 python-scripts/*.json
 python-scripts/*.jsonl
+python-scripts/raw
+
+# production file
+config/production.json
