- Enabled producing build folder for when building ts and fixed the build path - Adjusted the start command to launch app.js within build file, which is for production - Updated the start command to allow for @ imports - Moved logging of requests into console only when not in productino and other small fixes - Updated README to include deployment info and some fixes.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,14 +8,13 @@
         "strict": true,
         "outDir": "build",
         "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
         "module": "nodenext",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "incremental": true,
-        "rootDir": "/",
+        "rootDir": "./",
         "paths": {
             "@backend/*": ["../backend/*"],
             "@frontend/*": ["../frontend/*"],
@@ -23,6 +22,6 @@
             "@root/*": ["../*"]
         }
     },
-    "include": ["src/**/*.ts", "**/*.ts"],
-    "exclude": ["node_modules", ".vscode"]
+    "include": ["src/**/*.ts", "**/*.ts", "config/default.json"],
+    "exclude": ["node_modules", ".vscode", "src/utils"]
 }
