--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     },
     "scripts": {
         "test": "jest  --watchAll --verbose",
-        "start": "node -r tsconfig-paths/register -r ts-node/register ./src/app.ts",
+        "start": "node -r tsconfig-paths/register -r ts-node/register ./build/src/app.js",
         "dev": "nodemon",
         "build": "rimraf ./build && tsc"
     },
@@ -35,6 +35,7 @@
         "debug": "^4.3.4",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
+        "express-winston": "^4.2.0",
         "graphql": "^16.6.0",
         "helmet": "^6.0.1",
         "joi": "^17.8.4",
@@ -54,7 +55,7 @@
         "eslint": "8.35.0",
         "jest": "^26.6.3",
         "nodemon": "^2.0.21",
-        "rimraf": "^4.4.0",
+        "rimraf": "^4.4.1",
         "supertest": "^6.1.1",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
