--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -24,6 +25,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "glob": "^7.1.6",
+    "graphql": "^16.6.0",
     "mkdirp": "^2.1.4",
     "next": "13.2.3",
     "path": "^0.12.7",
