- Changed node engine version and fixed up the package lock. - Installed rimraf, ts-node and others into dependencies since didn't work inside dev-dependencies

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,11 @@
         "module": "nodenext",
         "resolveJsonModule": true,
         "isolatedModules": true,
+        "noImplicitAny": false,
         "incremental": true,
+        "typeRoots": [
+            "./typings",
+        ],
         "rootDir": "./",
         "paths": {
             "@backend/*": ["../backend/*"],
