--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "kicksmarter",
-  "version": "0.1.0",
-  "private": true,
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "build:icons": "node tasks/icons",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.11",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@visx/curve": "^3.0.0",
-    "@visx/drag": "^3.0.1",
-    "@visx/responsive": "^3.0.0",
-    "@visx/scale": "^3.0.0",
-    "@visx/shape": "^3.0.0",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "glob": "^7.1.6",
-    "graphql": "^16.6.0",
-    "mkdirp": "^2.1.4",
-    "next": "13.2.3",
-    "path": "^0.12.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-slider": "^2.0.4",
-    "sass": "^1.58.3",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "@types/react-slider": "^1.3.1",
-    "svg-sprite": "^1.5.0"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "author": "",
-  "license": "ISC"
+    "name": "kicksmarter",
+    "version": "0.1.0",
+    "private": true,
+    "engines": {
+        "node": ">=16.0.0"
+    },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "build:icons": "node tasks/icons",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.7.11",
+        "@types/node": "18.14.2",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.11",
+        "@visx/curve": "^3.0.0",
+        "@visx/drag": "^3.0.1",
+        "@visx/responsive": "^3.0.0",
+        "@visx/scale": "^3.0.0",
+        "@visx/shape": "^3.0.0",
+        "eslint": "8.35.0",
+        "eslint-config-next": "13.2.3",
+        "glob": "^7.1.6",
+        "graphql": "^16.6.0",
+        "gsap": "^3.11.5",
+        "mkdirp": "^2.1.4",
+        "next": "13.2.3",
+        "path": "^0.12.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-slider": "^2.0.4",
+        "sass": "^1.58.3",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "@types/react-slider": "^1.3.1",
+        "svg-sprite": "^1.5.0"
+    },
+    "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+    "main": "next.config.js",
+    "author": "",
+    "license": "ISC"
 }
