--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build:icons": "node frontend/tasks/icons -w frontend",
         "dev:backend": "npm run dev -w backend",
         "build:backend": "npm run build -w backend",
+        "build:frontend": "npm run build -w frontend",
         "start:backend": "npm run start -w backend"
     },
     "author": "",
